--- a/test_data/unit_test_generated/creates_new_catalog.yaml
+++ b/test_data/unit_test_generated/creates_new_catalog.yaml
@@ -5,14 +5,14 @@ then:
   status: 201
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
+    value: Wed, 30 Jul 2025 02:17:46 GMT
   - name: server
     value: uvicorn
   - name: content-length
-    value: '113'
+    value: '125'
   - name: content-type
     value: application/json
-  body: '{"id":4,"name":"dummy_unused_catalog","created_at":"2025-07-28T19:26:19.451075-06:00","owner_handle":"test_user"}'
+  body: '{"id":2,"name":"dummy_unused_catalog","created_at":"2025-07-29T20:17:47.829689-06:00","owner_handle":"test_user_no_catalogs"}'
 ---
 when:
   path: /api/v1/catalog/catalogs/dummy_unused_catalog/store/config
@@ -22,7 +22,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
+    value: Wed, 30 Jul 2025 02:17:47 GMT
   - name: server
     value: uvicorn
   - name: content-length
