--- a/test_data/unit_test_generated/publish_provider_error_when_user_only_has_read_access_to_catalog.yaml
+++ b/test_data/unit_test_generated/publish_provider_error_when_user_only_has_read_access_to_catalog.yaml
@@ -1,70 +1,4 @@
 when:
-  path: /api/v1/catalog/catalogs/
-  method: POST
-then:
-  status: 201
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '117'
-  - name: content-type
-    value: application/json
-  body: '{"id":3,"name":"publish_tests_read_write","created_at":"2025-07-28T19:26:19.446515-06:00","owner_handle":"test_user"}'
----
-when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/store/config
-  method: PUT
-  body: '{"store_type":"meta-only"}'
-then:
-  status: 200
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '26'
-  - name: content-type
-    value: application/json
-  body: '{"store_type":"meta-only"}'
----
-when:
-  path: /api/v1/catalog/catalogs/
-  method: POST
-then:
-  status: 201
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '116'
-  - name: content-type
-    value: application/json
-  body: '{"id":5,"name":"publish_tests_read_only","created_at":"2025-07-28T19:26:19.488438-06:00","owner_handle":"test_user"}'
----
-when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_only/store/config
-  method: PUT
-  body: '{"store_type":"meta-only"}'
-then:
-  status: 200
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '26'
-  - name: content-type
-    value: application/json
-  body: '{"store_type":"meta-only"}'
----
-when:
   path: /api/v1/catalog/catalogs/publish_tests_read_only/packages
   method: POST
   body: '{"original_url":"dummy"}'
@@ -72,24 +6,24 @@ then:
   status: 201
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
+    value: Wed, 30 Jul 2025 02:17:47 GMT
   - name: server
     value: uvicorn
   - name: content-length
-    value: '72'
+    value: '73'
   - name: content-type
     value: application/json
-  body: '{"catalog":"publish_tests_read_only","name":"mypkg","original_url":null}'
+  body: '{"catalog":"publish_tests_read_only","name":"mypkg5","original_url":null}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_only/packages/mypkg/publish/info
+  path: /api/v1/catalog/catalogs/publish_tests_read_only/packages/mypkg5/publish/info
   method: POST
   body: '{}'
 then:
   status: 200
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
+    value: Wed, 30 Jul 2025 02:17:47 GMT
   - name: server
     value: uvicorn
   - name: content-length
@@ -99,14 +33,14 @@ then:
   body: '{"ingress_uri":null,"ingress_auth":null,"catalog_store_config":{"store_type":"meta-only"}}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_only/packages/mypkg/builds
+  path: /api/v1/catalog/catalogs/publish_tests_read_only/packages/mypkg5/builds
   method: POST
-  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"dummy","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"dummy","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
+  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"mypkg5","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"mypkg5","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
 then:
   status: 201
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:18 GMT
+    value: Wed, 30 Jul 2025 02:17:47 GMT
   - name: server
     value: uvicorn
   - name: content-length
