--- a/test_data/unit_test_generated/repeat_publish_of_existing_package_succeeds.yaml
+++ b/test_data/unit_test_generated/repeat_publish_of_existing_package_succeeds.yaml
@@ -1,95 +1,29 @@
 when:
-  path: /api/v1/catalog/catalogs/
+  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages
   method: POST
+  body: '{"original_url":"dummy"}'
 then:
-  status: 409
+  status: 201
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
+    value: Wed, 30 Jul 2025 02:17:48 GMT
   - name: server
     value: uvicorn
   - name: content-length
     value: '74'
   - name: content-type
     value: application/json
-  body: '{"detail":"The catalog with name publish_tests_read_write already exists"}'
+  body: '{"catalog":"publish_tests_read_write","name":"mypkg6","original_url":null}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/store/config
-  method: PUT
-  body: '{"store_type":"meta-only"}'
-then:
-  status: 200
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '26'
-  - name: content-type
-    value: application/json
-  body: '{"store_type":"meta-only"}'
----
-when:
-  path: /api/v1/catalog/catalogs/
-  method: POST
-then:
-  status: 409
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '73'
-  - name: content-type
-    value: application/json
-  body: '{"detail":"The catalog with name publish_tests_read_only already exists"}'
----
-when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_only/store/config
-  method: PUT
-  body: '{"store_type":"meta-only"}'
-then:
-  status: 200
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '26'
-  - name: content-type
-    value: application/json
-  body: '{"store_type":"meta-only"}'
----
-when:
-  path: /api/v1/catalog/catalogs/test_user/packages
-  method: POST
-  body: '{"original_url":"dummy"}'
-then:
-  status: 200
-  header:
-  - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
-  - name: server
-    value: uvicorn
-  - name: content-length
-    value: '58'
-  - name: content-type
-    value: application/json
-  body: '{"catalog":"test_user","name":"mypkg","original_url":null}'
----
-when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg/publish/info
+  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg6/publish/info
   method: POST
   body: '{}'
 then:
   status: 200
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
+    value: Wed, 30 Jul 2025 02:17:48 GMT
   - name: server
     value: uvicorn
   - name: content-length
@@ -99,14 +33,14 @@ then:
   body: '{"ingress_uri":null,"ingress_auth":null,"catalog_store_config":{"store_type":"meta-only"}}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg/builds
+  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg6/builds
   method: POST
-  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"dummy","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"dummy","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
+  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"mypkg6","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"mypkg6","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
 then:
-  status: 200
+  status: 201
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
+    value: Wed, 30 Jul 2025 02:17:48 GMT
   - name: server
     value: uvicorn
   - name: content-length
@@ -116,14 +50,14 @@ then:
   body: '{"store":null}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg/publish/info
+  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg6/publish/info
   method: POST
   body: '{}'
 then:
   status: 200
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
+    value: Wed, 30 Jul 2025 02:17:48 GMT
   - name: server
     value: uvicorn
   - name: content-length
@@ -133,14 +67,14 @@ then:
   body: '{"ingress_uri":null,"ingress_auth":null,"catalog_store_config":{"store_type":"meta-only"}}'
 ---
 when:
-  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg/builds
+  path: /api/v1/catalog/catalogs/publish_tests_read_write/packages/mypkg6/builds
   method: POST
-  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"dummy","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"dummy","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
+  body: '{"derivation":{"broken":false,"description":"dummy","drv_path":"dummy","name":"mypkg6","outputs":[{"name":"out","store_path":"/nix/store/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA-foo"}],"outputs_to_install":[],"pname":"mypkg6","system":"x86_64-linux","version":"1.0.0"},"locked_base_catalog_url":"https://github.com/flox/nixpkgs?rev=5e0ca22929f3342b19569b21b2f3462f053e497b","rev":"dummy","rev_count":0,"rev_date":"2025-01-01T12:00:00Z","url":"dummy"}'
 then:
   status: 200
   header:
   - name: date
-    value: Tue, 29 Jul 2025 01:26:19 GMT
+    value: Wed, 30 Jul 2025 02:17:48 GMT
   - name: server
     value: uvicorn
   - name: content-length
